compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__guards__module_nested_access.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/guards.rs
assertion_line: 594
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Bruce Wayne\"\n            case name {\n              n if n == hero.batman.secret_identity.name -> True\n              _ -> False\n            }\n          }\n        "
snapshot_kind: text
---
----- SOURCE CODE

          import hero
          pub fn main() {
            let name = "Bruce Wayne"
            case name {
              n if n == hero.batman.secret_identity.name -> True
              _ -> False
            }
          }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 3).
-spec main() -> boolean().
main() ->
    Name = <<"Bruce Wayne"/utf8>>,
    case Name of
        N when N =:= erlang:element(
            2,
            erlang:element(2, {hero, {person, <<"Bruce Wayne"/utf8>>}})
        ) ->
            true;

        _ ->
            false
    end.
