compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__guards__module_string_access.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/guards.rs
assertion_line: 499
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == hero.ironman -> True\n              _ -> False\n            }\n          }\n        "
snapshot_kind: text
---
----- SOURCE CODE

          import hero
          pub fn main() {
            let name = "Tony Stark"
            case name {
              n if n == hero.ironman -> True
              _ -> False
            }
          }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 3).
-spec main() -> boolean().
main() ->
    Name = <<"Tony Stark"/utf8>>,
    case Name of
        N when N =:= <<"Tony Stark"/utf8>> ->
            true;

        _ ->
            false
    end.
