compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__guards__nested_record_access.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/guards.rs
assertion_line: 473
expression: "\npub type A {\n  A(b: B)\n}\n\npub type B {\n  B(c: C)\n}\n\npub type C {\n  C(d: Bool)\n}\n\npub fn a(a: A) {\n  case a {\n    _ if a.b.c.d -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type A {
  A(b: B)
}

pub type B {
  B(c: C)
}

pub type C {
  C(d: Bool)
}

pub fn a(a: A) {
  case a {
    _ if a.b.c.d -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([a/1]).
-export_type([a/0, b/0, c/0]).

-type a() :: {a, b()}.

-type b() :: {b, c()}.

-type c() :: {c, boolean()}.

-file("project/test/my/mod.gleam", 14).
-spec a(a()) -> integer().
a(A) ->
    case A of
        _ when erlang:element(2, erlang:element(2, erlang:element(2, A))) ->
            1;

        _ ->
            0
    end.
