compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__guards__only_guards.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/guards.rs
assertion_line: 388
expression: "\npub const string_value = \"constant value\"\n\npub fn main(arg) {\n  case arg {\n    _ if arg == string_value -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const string_value = "constant value"

pub fn main(arg) {
  case arg {
    _ if arg == string_value -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 4).
-spec main(binary()) -> integer().
main(Arg) ->
    case Arg of
        _ when Arg =:= <<"constant value"/utf8>> ->
            1;

        _ ->
            0
    end.
